--- a/Readme
+++ b/Readme
@@ -3,3 +3,5 @@ install node-spotify-api and request node packages
 npm install node-spotify-api
 
 npm install request
+
+Then Sign up in 'https://developer.spotify.com/documentation/web-api/' and input Client ID into SECRET_ID, Client Secret into SECRET_KEY
