--- a/Readme
+++ b/Readme
@@ -4,4 +4,6 @@ npm install node-spotify-api
 
 npm install request
 
-Then Sign up in 'https://developer.spotify.com/documentation/web-api/' and input Client ID into SECRET_ID, Client Secret into SECRET_KEY
+Then Sign up in 'https://developer.spotify.com/documentation/web-api/' and input Client ID into SECRET_ID, Client Secret into SECRET_KEY.
+
+After all of them tou can search songs and movies in your terminal.
